# GameofLife

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
src/: Constants.h  Simulation.cpp  Types.h  main.cpp
